feat: Improve AI model and UI responsiveness
Switches the lead scoring AI model to `gemini-3-pro-preview` for more complex reasoning and updates the `gemini-3-flash-preview` for basic text generation.

Enhances UI responsiveness with a more dynamic fade-in animation and improves overall page rendering by applying font smoothing and removing the redundant ErrorBoundary component.

Refactors the `StatBox` component to use Tailwind CSS classes for better styling integration.

--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
                 extend: {
                     animation: {
                         'fade-in': 'fade-in 0.3s ease-out',
-                        'pulse-slow': 'pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite',
                     },
                     keyframes: {
                         'fade-in': {
-                            '0%': { opacity: '0' },
-                            '100%': { opacity: '1' },
+                            '0%': { opacity: '0', transform: 'translateY(10px)' },
+                            '100%': { opacity: '1', transform: 'translateY(0)' },
                         }
                     }
                 }
@@ -33,6 +32,7 @@
             padding: 0;
             background-color: #f8fafc;
             color: #0f172a;
+            -webkit-font-smoothing: antialiased;
         }
         #root {
             min-height: 100vh;
